--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "serve": "^12.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -26,8 +27,8 @@
     "start": "yarn-run-all build:tailwind --paraller watch:tawilwind dev",
     "dev": "react-scripts start",
     "prebuild": "run-s build:tailwind",
-    "build": "react-script build",
-    "test": "react-script",
+    "build": "react-scripts build",
+    "test": "react-scripts",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
